[gd_scene load_steps=11 format=2]

[ext_resource path="res://Mini Scenes/Popups/LettersPanel.gd" type="Script" id=1]
[ext_resource path="res://Mini Scenes/Pieces/BlackBack.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Backgrounds/Old-Parchment-Textures.jpg" type="Texture" id=3]
[ext_resource path="res://Fonts/Kayambang.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Mini Scenes/Pieces/LetterButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/LetterContainer.png" type="Texture" id=6]
[ext_resource path="res://Art/LetterViewer.png" type="Texture" id=7]
[ext_resource path="res://Mini Scenes/Popups/LetterList.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 4 )

[node name="LettersPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = -2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BlackBack" parent="." instance=ExtResource( 2 )]

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -374.0
margin_top = -222.0
margin_right = 374.0
margin_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 161.888
margin_top = -188.95
margin_right = 390.888
margin_bottom = -128.95
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 171.099
margin_top = 149.913
margin_right = 393.099
margin_bottom = 213.913
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "SEND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.6417
margin_top = -115.875
margin_right = 367.358
margin_bottom = 151.125
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recipient" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.9347
margin_top = 83.2483
margin_right = 367.065
margin_bottom = 123.248
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterViewer" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.3497
margin_top = -121.875
margin_right = 337.65
margin_bottom = 128.125
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="LetterList" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -522.35
margin_top = -279.875
margin_right = -482.35
margin_bottom = -239.875
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
letter_button = ExtResource( 5 )

[node name="LetterContainer" type="TextureRect" parent="LetterList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 167.0
margin_top = 85.0
margin_right = 369.0
margin_bottom = 435.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="button_up" from="CloseButton" to="." method="_on_CloseButton_button_up"]
[connection signal="button_up" from="SendButton" to="." method="_on_SendButton_button_up"]
